  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
  ------------------------------------------------------------------------

2005/03/08: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added flags to GWEN_CRYPTKEY which will be used to influence the behaviour
  of some functions (namely the sign function of RSA keys)
- introduced flag GWEN_CRYPT_FLAG_DISABLE_SMALLER_SIGNATURE which will disable
  selecting the smaller signature when signing data (might help solve a 
  special bug in AqHBCI which has not yet been fixed).

2005-03-07   Christian Stimming <stimming@tuhh.de>

	* src/parser/xml.c (GWEN_XML__ReadWordBuf): Rearrange some checks
	to improve performance. I tried to improve some flags-checks by
	introducing extra variables, but that gave no improvements.

	* src/io/bufferedio.c (GWEN_BufferedIO_ReadChar): Because this
	function is called for every character read, we skip the assert
	check in this function.

	
2005/03/04: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- partially reverted cs' changes to base/buffer.c: Please dicuss *before*
  making changes to this important class, it is widely used (especially
  GWEN_Buffer_AppendByte).
- took back my latest change (not completely, though)
  (argh, we *need* to discuss those changes)
- started optimisations of my own:
  - GWEN_Buffer: 
    - ReadChar() no longer calls PeekChar()
    - _new(): Now allocate size+1 (less reallocs, in a test from over 
       700 to 4)
  - GWEN_BufferedIO: same here
  - GWEN_XML: 
    - ReadWordBuf now doesn't call CheckEOF, since the return value
      of GWEN_BufferedIO_ReadChar() has an error code for this case
    - ReadWordBuf no longer uses GWEN_Buffer_AppendByte
    - ReadBIO no longer calls GWEN_BufferedIO_CheckEOF
  - GWEN_Text: 