@@ -2,6 +2,13 @@
   !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
   ------------------------------------------------------------------------
 
+2005/03/09: Martin Preuss<martin@libchipcard.de>
+-------------------------------------------------
+- added flag GWEN_DB_FLAGS_LOCKFILE to GWEN_DB. This is used when reading
+  or writing a GWEN_DB file. If the flag is given the file is locked
+  before opening and unlocked after closing.
+
+
 2005/03/08: Martin Preuss<martin@libchipcard.de>
 -------------------------------------------------
 - added flags to GWEN_CRYPTKEY which will be used to influence the behaviour
